# Cellular-Automata-Heart-Tissue

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  cells.cpp  cells.h  fft.cpp  main.cpp
